@@ -24,7 +24,7 @@ function invoke-git {
                 $arguments += "$parameter "
             }
         }
-        cmdDo -command git -arguments $arguments -silent:$silent -returnValue:$returnValue -inputStr $inputStr
+        cmdDo -command git -arguments $arguments -silent:$silent -returnValue:$returnValue -inputStr $inputStr -messageIfCmdNotFound "Git not found. Please install it from https://git-scm.com/downloads"
     }
 }
 Export-ModuleMember -Function Invoke-git
